--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sportscentral",
+  "name": "@pamirhabib/sports-central",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
